# 7600_swap_public

./: .gitignore  Makefile  README  bash-autocomplete.sh  pyproject.toml
config_generator/: connections.py  excel_manager.py  fstools.py  parameters.py  postcheck.py  validator.py
config_generator/.data/: readme.txt
config_generator/generator/: generator.py  gentools.py
config_generator/parser/: parser.py  parstools.py
config_generator/scripts/: config_generator.py
